log
Wed 20 Mar 2024 04:55:34 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
a19d876
Wed 20 Mar 2024 05:06:06 PM UTC: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
3fb751d
Wed 20 Mar 2024 05:33:22 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:18: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   64 |   int elemento = first(L);
      |                  ^~~~~
exercises.c:65:19: error: comparison between pointer and integer [-Werror]
   65 |   while (elemento != NULL)
      |                   ^~
exercises.c:68:14: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   68 |     elemento = next(L);
      |              ^
cc1: all warnings being treated as errors
Compilation failed
25b51b7
Wed 20 Mar 2024 05:33:40 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:68:15: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   68 |     *elemento = next(L);
      |               ^
cc1: all warnings being treated as errors
Compilation failed
ff43d05
Wed 20 Mar 2024 05:39:57 PM UTC: 
 exercises.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:15: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   69 |     *elemento = next(L);
      |               ^
exercises.c: In function ‘eliminaElementos’:
exercises.c:96:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   96 |       *dato = next(L);
      |             ^
cc1: all warnings being treated as errors
Compilation failed
97e23bc
Wed 20 Mar 2024 05:43:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:15: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   69 |     *elemento = next(L);
      |               ^
cc1: all warnings being treated as errors
Compilation failed
97e23bc
Wed 20 Mar 2024 05:44:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
cc38616
Wed 20 Mar 2024 05:50:36 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:96:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   96 |       *dato = next(L);
      |             ^
cc1: all warnings being treated as errors
Compilation failed
f2c2f7c
Wed 20 Mar 2024 05:54:51 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:9: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   88 |   *dato = first(L);
      |         ^
exercises.c:98:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   98 |       *dato = next(L);
      |             ^
exercises.c:88:9: error: ‘dato’ is used uninitialized [-Werror=uninitialized]
   88 |   *dato = first(L);
      |   ~~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b568246
Wed 20 Mar 2024 05:55:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:9: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   88 |   *dato = (int*)first(L);
      |         ^
exercises.c:98:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   98 |       *dato = next(L);
      |             ^
exercises.c:88:9: error: ‘dato’ is used uninitialized [-Werror=uninitialized]
   88 |   *dato = (int*)first(L);
      |   ~~~~~~^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
863386a
Wed 20 Mar 2024 05:55:26 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:98:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   98 |       *dato = next(L);
      |             ^
cc1: all warnings being treated as errors
Compilation failed
5ee4e6b
Wed 20 Mar 2024 05:55:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
7d84f7d
Wed 20 Mar 2024 05:57:12 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
41bd5a2
Wed 20 Mar 2024 05:57:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:70:10: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   70 |     suma += elemento;
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
3f96bbb
Wed 20 Mar 2024 05:57:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
28b7e42
Wed 20 Mar 2024 06:05:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 40/70
318b938
Wed 20 Mar 2024 06:18:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
efe1846
Wed 20 Mar 2024 06:19:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
abcb05a
Wed 20 Mar 2024 06:19:26 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
ccf2d3b
Wed 20 Mar 2024 11:26:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:92:16: error: comparison between pointer and integer [-Werror]
   92 |       if (dato == elem)
      |                ^~
cc1: all warnings being treated as errors
Compilation failed
5f9767c
Wed 20 Mar 2024 11:26:35 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:90:16: error: comparison between pointer and integer [-Werror]
   90 |   while (*dato != NULL)
      |                ^~
cc1: all warnings being treated as errors
Compilation failed
9a7c03a
Wed 20 Mar 2024 11:26:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
3afdab0
Wed 20 Mar 2024 11:41:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
6ce32e8
Thu 21 Mar 2024 02:42:28 AM UTC: 
 exercises.c | 35 ++++++++++++++++++++++++++++++++++-
 1 file changed, 34 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
0e81c1b
